--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
 
 <!--text starts-->
     <h1>Hello, world!</h1>
+    
+    <p>This is a lab I'm doing for CSC102. The navbar and carousel code came from the Bootstrap library.</p>
+    
   <footer class="text-center">
     <hr/>
     <p>&copy; 2018-2020 Company, Inc. Privacy Terms </p>
